--- a/themes/kmom02/css/style.css
+++ b/themes/kmom02/css/style.css
@@ -6525,7 +6525,6 @@ pre code {
 }
 * {
   box-sizing: border-box;
-  font-size: 100%;
   border: 0 none;
   margin: 0;
   padding: 0;
@@ -6533,6 +6532,7 @@ pre code {
 }
 
 html, body {
+  font-size: 100%;
   height: 100%;
 }
 
@@ -6557,6 +6557,7 @@ a:hover {
 
 p {
   font-size: 1em;
+  margin-bottom: 1rem;
 }
 
 ol, ul {
