--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -13,7 +13,6 @@
 
 * {
     box-sizing: border-box;
-    font-size: 100%;
     border: 0 none;
     margin: 0;
     padding: 0;
@@ -21,6 +20,7 @@
 }
 
 html, body {
+    font-size: 100%;
     height: 100%;
 }
 
@@ -47,6 +47,7 @@ a:hover {
 
 p {
     font-size: 1em;
+    margin-bottom: 1rem;
 }
 
 ol, ul {
