--- a/themes/kmom02/scss/_footer.scss
+++ b/themes/kmom02/scss/_footer.scss
@@ -1,23 +1,24 @@
 /* Footer */
 
+@use 'variables' as vars;
+@use 'mixins' as mix;
+
 .footer {
 
-    flex: 0 0 auto;
-    padding: 0 1rem;
-
-    @include mix.flex-container();
+    @include mix.fixed-padding-and-no-growth;
+    @include mix.flex-container;
     border-top: 1px solid vars.$font-color;
     background-color: vars.$background-footer-color;
     color: vars.$font-color-footer;
     padding: 0.5rem 1rem;
 
     a {
+        @include mix.font-no-underline(vars.$font-color-footer);
         padding: 0.5rem;
-        color: vars.$font-color-footer;
     }
 
     .social {
-        font-size: 2rem;
+        font-size: vars.$social-font-size;
     }
 }
 
