--- a/themes/kmom02/scss/_mobile-menu.scss
+++ b/themes/kmom02/scss/_mobile-menu.scss
@@ -1,6 +1,7 @@
 /* Mobile menu */
 
 @use 'variables' as vars;
+@use 'mixins' as mix;
 
 .slide {
     overflow-y: hidden !important;
@@ -9,8 +10,7 @@
 
 .nav {
     ul {
-        display: flex;
-        justify-content: flex-end;
+        @include mix.flex-container(flex-end, center);
         padding: 1em 0;
         list-style: none;
     }
@@ -59,7 +59,6 @@
         }
 
     }
-
 
     .js .nav-toggle {
         display: block;
