--- a/themes/kmom02/scss/_variables.scss
+++ b/themes/kmom02/scss/_variables.scss
@@ -3,16 +3,10 @@
 $background-color: #fff;
 $background-footer-color: #2C3A47; //rgb(214, 233, 250);
 $background-header-color: #393232;
+$background-code-color: #f5f5f5;
 
-
-/* Font colors */
-$font-color: #333;
-$font-color-header: #fff;
-$font-color-footer: #fff;
-$main-link-color: #006400;
-$hover-color: #AFBF63;
-
-$img-border-color: #333;
+$border-dark-grey: 1px solid #333;
+$border-light-grey: 1px solid #ccc;
 
 /* Table colors */
 $table-header-color: #c8d391;
@@ -21,9 +15,25 @@ $table-alt-color: #f9f9f9;
 
 
 /* Distances */
-$line-height: 1.4;
 $list-padding: 1.5em;
+$base-margin-bottom: 1rem;
 
 /* Fonts */
 $label-font: 'Titillium Web', sans-serif;
 $paragraph-font: 'Roboto', sans-serif;
+$code-font: monospace;
+$base-font-size: 1em;
+$social-font-size: 2rem;
+$code-font-size: 0.85rem;
+$table-font-size: 0.9rem;
+$base-line-height: 1.4;
+$code-line-height: 1.9824;
+
+
+
+/* Font colors */
+$font-color: #333;
+$font-color-header: #fff;
+$font-color-footer: #fff;
+$main-link-color: #006400;
+$hover-color: #AFBF63;
