--- a/themes/kmom02/scss/_variables.scss
+++ b/themes/kmom02/scss/_variables.scss
@@ -20,7 +20,7 @@ $base-margin-bottom: 1rem;
 
 /* Fonts */
 $label-font: 'Titillium Web', sans-serif;
-$paragraph-font: 'Roboto', sans-serif;
+$paragraph-font: 'Inter', sans-serif;
 $code-font: monospace;
 $base-font-size: 1em;
 $social-font-size: 2rem;
