--- a/themes/kmom02/css/style.css
+++ b/themes/kmom02/css/style.css
@@ -314,14 +314,6 @@ template {
 /* Fonts */
 /* Font colors */
 /* Code */
-/* roboto-regular */
-@font-face {
-  font-display: swap;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../../shared/fonts/google/roboto-v30-latin-regular.woff2") format("woff2");
-}
 /* titillium-web-regular */
 @font-face {
   font-display: swap;
@@ -329,6 +321,14 @@ template {
   font-style: normal;
   font-weight: 400;
   src: url("../../shared/fonts/google/titillium-web-v17-latin-regular.woff2") format("woff2");
+}
+/* inter-regular - latin */
+@font-face {
+  font-display: swap;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../../shared/fonts/google/inter-v13-latin-regular.woff2") format("woff2");
 }
 /* Font awesome */
 /*!
@@ -6609,7 +6609,7 @@ tr:nth-child(even) {
   border: 0 none;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 html, body {
