changed link color

--- a/themes/kmom02/css/style.css
+++ b/themes/kmom02/css/style.css
@@ -6626,6 +6626,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.6em;
   font-weight: bold;
   font-family: "Titillium Web", sans-serif;
+  letter-spacing: 0.2rem;
 }
 
 a {
@@ -6670,7 +6671,9 @@ body a {
   max-width: 800px;
 }
 .main a:hover {
-  color: #AFBF63;
+  color: #fff;
+  background-color: #AFBF63;
+  text-decoration: none;
 }
 .main .me {
   width: 250px;
