--- a/themes/kmom02/scss/_variables.scss
+++ b/themes/kmom02/scss/_variables.scss
@@ -35,3 +35,20 @@ $font-color-header: #fff;
 $font-color-footer: #fff;
 $main-link-color: #006400;
 $hover-color: #AFBF63;
+$hover-box: #fff;
+
+
+/* box*/
+$box-colors: (
+#95d1dc,
+#ff6845,
+#f9d545,
+#4caa58,
+#1a77a3,
+#6fcb9f,
+#eea034
+);
+
+$box-shadow-color: #333333e8;
+$box-shadow-blur: 3px;
+
